# RAG-with-Distributed-Embeddings

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  launcher.py  main.py  pyproject.toml  requirements.txt  start.bat
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
src/: abstract_llm.py  abstract_vectorstore.py  config.py  data_loader.py  distributed_embedding.py  embedding.py  openrouter.py  search.py  worker.py
